2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* src/tray.cpp: Fixed non-GNOME compilation.

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed non-GNOME compilation.

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* lib/about/gnome-about.c: Fixed bug.

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* help/C/gnomemeeting.xml: Committed update by Christopher Warner.
	Thanks!

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-zeroconf.cpp: Better string? 

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* help/C/gnomemeeting.xml: Fixed XML tag.
	
	* lib/contacts/gm_contacts-zeroconf.cpp: Implemented case-insensitive
	search on the zeroconf contacts.	

2004-11-15  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented required dep to 0.9.7 for HOWL as there is
	a bug that can be triggered in 0.9.6 using GM.

	* help/C/gnomemeeting.xml, help/C/figures/config_d1.png,
	help/C/figures/config_d2.png, help/C/figures/config_d3.png,
	help/C/figures/config_d4.png, help/C/figures/config_d5.png,
	help/C/figures/config_d6.png, help/C/figures/config_d7.png,
	help/C/figures/config_d8.png, help/C/figures/config_d9.png: Updated
	manual for release 1.2.
	
	* src/callbacks.cpp: Fixed last name of generous contributor.

	* src/zeroconf_publisher.cpp, src/zeroconf_publisher.h: Applied and
	committed patch from Julien Puydt improving comments.

2004-11-14  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-zeroconf.cpp: Added missing config.h
	include.

	* src/zeroconf_publisher.cpp: Cleanups.

2004-11-14  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-ldap.cpp, lib/contacts/gm_contacts-ldap.h,
	lib/contacts/gm_contacts-remote.cpp, 
	lib/contacts/gm_contacts-zeroconf.cpp, 
	lib/contacts/gm_contacts-zeroconf.h: Improved modularity.

2004-11-14  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-zeroconf.cpp: Changed h323:// to h323:.
