@@ -960,7 +960,7 @@
       <default>1.0</default>
       <locale name="C">
 	<short>The local zoom value</short>
-	<long>The zoom value to apply to images displayed in the local video window (can be 0.50, 1.00, or 2.00) for video</long>
+	<long>The zoom value to apply to images displayed in the local video window (can be 0.50, 1.00, or 2.00)</long>
       </locale>
     </schema>
     <schema>	
@@ -971,7 +971,7 @@
       <default>1.0</default>
       <locale name="C">
 	<short>The remote zoom value</short>
-	<long>The zoom value to apply to images displayed in the remote video window (can be 0.50, 1.00, or 2.00) for video</long>
+	<long>The zoom value to apply to images displayed in the remote video window (can be 0.50, 1.00, or 2.00)</long>
       </locale>
     </schema>
     <schema>	
@@ -982,7 +982,7 @@
       <default>1.0</default>
       <locale name="C">
 	<short>The zoom value</short>
-	<long>The zoom value to apply to images displayed in the main GUI (can be 0.50, 1.00, or 2.00) for video</long>
+	<long>The zoom value to apply to images displayed in the main GUI (can be 0.50, 1.00, or 2.00)</long>
       </locale>
     </schema>
     <schema>	
