@@ -1,5 +1,9 @@
 2004-11-15  Damien Sandras  <dsandras@gnome.org>
 
+	* gnomemeeting.schemas.in.in: Fixed strings.
+
+2004-11-15  Damien Sandras  <dsandras@gnome.org>
+
 	* src/tray.cpp: Fixed non-GNOME compilation.
 
 2004-11-15  Damien Sandras  <dsandras@gnome.org>
